<?xml version="1.0"?>
<package format="2">
  <name>imu_x_fusion</name>
  <version>1.0.0</version>
  <description>The imu_x_fusion package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jptalledo@gmail.com">Jean Paul Talledo Vilela</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>ros_imu_bno055</build_export_depend>
  <build_export_depend>ubloxf9p_gps</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>ros_imu_bno055</exec_depend>
  <exec_depend>ubloxf9p_gps</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
