<?xml version="1.0"?>
<package>
  <name>ubloxf9p</name>
  <version>1.0.0</version>
  <description>Provides a ublox_gps node for u-blox GPS receivers, messages, and serialization packages for the binary UBX protocol.</description>
  <author>Jean Paul Talledo Vilela</author>
  <maintainer email="jtalledovilela@vtti.vt.edu">Jean Paul Talledo Vilela</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <url>http://wiki.ros.org/ublox</url>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <rosdoc external="http://www.u-blox.com/en/product-resources"/>
    <!-- You can specify that this package is a metapackage here: -->
    <metapackage />
  </export>
</package>
