<package>
  <name>ubloxf9p_msgs</name>
  <version>1.0.0</version>
  <description>

     ublox_msgs contains raw messages for u-blox GNSS devices.

  </description>
  <author>Jean Paul Talledo Vilela</author>
  <maintainer email="jtalledovilela@vtti.vt.edu">Jean Paul Talledo Vilela</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ublox</url>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>message_generation</buildtool_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>ubloxf9p_serialization</build_depend>
  <run_depend>ubloxf9p_serialization</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <rosdoc external="http://www.u-blox.com/en/product-resources"/>
  </export>

</package>
