<?xml version="1.0"?>
<package>
  <name>ubloxf9p_serialization</name>
  <version>1.0.0</version>
  <description>

     ublox_serialization provides header files for serialization of ROS messages to and from u-blox message format.

  </description>
  <author>Jean Paul Talledo vilela</author>
  <maintainer email="jtalledovilela@vtti.vt.edu">Jean Paul Talledo Vilela</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ublox</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roscpp_serialization</build_depend>
  <run_depend>roscpp_serialization</run_depend>

  <export>
    <rosdoc external="http://www.u-blox.com/en/product-resources"/>
  </export>

</package>
